tests/paczka1/fuzzy1/52387428.err
Error in line 6: kFgEVjZQofJ A304 23,0
Error in line 9: YsO0xGMT S483 72,7
Error in line 13: 6dTI A113 51,1
Error in line 15: 6dTI S49 62,3
Error in line 1: A304 S483 42,0
Error in line 16: 6dTI A113 49,5
Error in line 21: ifawV S49 72,3
Error in line 18: A304 A304 49,2
Error in line 29: 6dTI S483 46,5
Error in line 10: kFgEVjZQofJ S483 185,4
Error in line 31: kFgEVjZQofJ A113 98,6
Error in line 32: kFgEVjZQofJ S483 67,9
